loop through each col in the df version of Complete_Concat_Identified.csv

--- a/prep_df_for_linearregression.ipynb
+++ b/prep_df_for_linearregression.ipynb
@@ -2,8 +2,526 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "4579111f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Class_ID\n",
+      "EndDate_PRE\n",
+      "EndDate_POST\n",
+      "FG_Statu_PRE\n",
+      "FG_Statu_POST\n",
+      "NormScore_PRE\n",
+      "NormScore_POST\n",
+      "TotalScores_POST\n",
+      "TotalScores_PRE\n",
+      "Q148\n",
+      "Q148_4_TEXT_PRE\n",
+      "Q148_4_TEXT_POST\n",
+      "Q148_PRE\n",
+      "Q148_POST\n",
+      "Q152_11\n",
+      "Q152_11_TEXT\n",
+      "Q152_11_TEXT_PRE\n",
+      "Q152_11_TEXT_POST\n",
+      "Q152_11_PRE\n",
+      "Q152_11_POST\n",
+      "Q152_21\n",
+      "Q152_21_PRE\n",
+      "Q152_21_POST\n",
+      "Q152_23\n",
+      "Q152_23_PRE\n",
+      "Q152_23_POST\n",
+      "Q152_25\n",
+      "Q152_25_PRE\n",
+      "Q152_25_POST\n",
+      "Q152_39\n",
+      "Q152_39_PRE\n",
+      "Q152_39_POST\n",
+      "Q153_11\n",
+      "Q153_11_TEXT\n",
+      "Q153_11_TEXT_PRE\n",
+      "Q153_11_TEXT_POST\n",
+      "Q153_11_PRE\n",
+      "Q153_11_POST\n",
+      "Q153_3\n",
+      "Q153_3_PRE\n",
+      "Q153_3_POST\n",
+      "Q153_47\n",
+      "Q153_47_PRE\n",
+      "Q153_47_POST\n",
+      "Q153_8\n",
+      "Q153_8_PRE\n",
+      "Q153_8_POST\n",
+      "Q154_11\n",
+      "Q154_11_TEXT\n",
+      "Q154_11_TEXT_PRE\n",
+      "Q154_11_TEXT_POST\n",
+      "Q154_11_PRE\n",
+      "Q154_11_POST\n",
+      "Q154_3\n",
+      "Q154_3_PRE\n",
+      "Q154_3_POST\n",
+      "Q154_8\n",
+      "Q154_8_PRE\n",
+      "Q154_8_POST\n",
+      "Q158_5_TEXT_PRE\n",
+      "Q158_5_TEXT_POST\n",
+      "Q158_PRE\n",
+      "Q158_POST\n",
+      "Q1B_PRE\n",
+      "Q1B_POST\n",
+      "Q1E_PRE\n",
+      "Q1E_POST\n",
+      "Q1b_19_TEXT_PRE\n",
+      "Q1b_19_TEXT_POST\n",
+      "Q1b_19_PRE\n",
+      "Q1b_19_POST\n",
+      "Q1b_28_PRE\n",
+      "Q1b_28_POST\n",
+      "Q1b_2_PRE\n",
+      "Q1b_2_POST\n",
+      "Q1b_5_PRE\n",
+      "Q1b_5_POST\n",
+      "Q1b_8_PRE\n",
+      "Q1b_8_POST\n",
+      "Q1e_10_PRE\n",
+      "Q1e_10_POST\n",
+      "Q1e_1_PRE\n",
+      "Q1e_1_POST\n",
+      "Q1e_2_PRE\n",
+      "Q1e_2_POST\n",
+      "Q1e_3_PRE\n",
+      "Q1e_3_POST\n",
+      "Q1e_4_PRE\n",
+      "Q1e_4_POST\n",
+      "Q1e_5_PRE\n",
+      "Q1e_5_POST\n",
+      "Q1e_6_PRE\n",
+      "Q1e_6_POST\n",
+      "Q1e_7_TEXT_PRE\n",
+      "Q1e_7_TEXT_POST\n",
+      "Q1e_7_PRE\n",
+      "Q1e_7_POST\n",
+      "Q1e_8_PRE\n",
+      "Q1e_8_POST\n",
+      "Q1e_9_PRE\n",
+      "Q1e_9_POST\n",
+      "Q2B_PRE\n",
+      "Q2B_POST\n",
+      "Q2E_PRE\n",
+      "Q2E_POST\n",
+      "Q2b_11_PRE\n",
+      "Q2b_11_POST\n",
+      "Q2b_1_PRE\n",
+      "Q2b_1_POST\n",
+      "Q2b_21_PRE\n",
+      "Q2b_21_POST\n",
+      "Q2b_2_PRE\n",
+      "Q2b_2_POST\n",
+      "Q2b_36_PRE\n",
+      "Q2b_36_POST\n",
+      "Q2b_38_TEXT_PRE\n",
+      "Q2b_38_TEXT_POST\n",
+      "Q2b_38_PRE\n",
+      "Q2b_38_POST\n",
+      "Q2b_6_PRE\n",
+      "Q2b_6_POST\n",
+      "Q2b_8_PRE\n",
+      "Q2b_8_POST\n",
+      "Q2b_9_PRE\n",
+      "Q2b_9_POST\n",
+      "Q2e_11_TEXT_PRE\n",
+      "Q2e_11_TEXT_POST\n",
+      "Q2e_11_PRE\n",
+      "Q2e_11_POST\n",
+      "Q2e_12_PRE\n",
+      "Q2e_12_POST\n",
+      "Q2e_14_PRE\n",
+      "Q2e_14_POST\n",
+      "Q2e_15_PRE\n",
+      "Q2e_15_POST\n",
+      "Q2e_16_PRE\n",
+      "Q2e_16_POST\n",
+      "Q2e_17_PRE\n",
+      "Q2e_17_POST\n",
+      "Q2e_34_PRE\n",
+      "Q2e_34_POST\n",
+      "Q2e_4_PRE\n",
+      "Q2e_4_POST\n",
+      "Q2e_6_PRE\n",
+      "Q2e_6_POST\n",
+      "Q328\n",
+      "Q328_PRE\n",
+      "Q328_POST\n",
+      "Q334\n",
+      "Q334_PRE\n",
+      "Q334_POST\n",
+      "Q337\n",
+      "Q337_PRE\n",
+      "Q337_POST\n",
+      "Q340\n",
+      "Q340_PRE\n",
+      "Q340_POST\n",
+      "Q346\n",
+      "Q346_PRE\n",
+      "Q346_POST\n",
+      "Q350\n",
+      "Q350_PRE\n",
+      "Q350_POST\n",
+      "Q3B_PRE\n",
+      "Q3B_POST\n",
+      "Q3D_PRE\n",
+      "Q3D_POST\n",
+      "Q3E_PRE\n",
+      "Q3E_POST\n",
+      "Q3a_PRE\n",
+      "Q3a_POST\n",
+      "Q3b_11_PRE\n",
+      "Q3b_11_POST\n",
+      "Q3b_1_PRE\n",
+      "Q3b_1_POST\n",
+      "Q3b_21_PRE\n",
+      "Q3b_21_POST\n",
+      "Q3b_2_PRE\n",
+      "Q3b_2_POST\n",
+      "Q3b_36_PRE\n",
+      "Q3b_36_POST\n",
+      "Q3b_38_TEXT_PRE\n",
+      "Q3b_38_TEXT_POST\n",
+      "Q3b_38_PRE\n",
+      "Q3b_38_POST\n",
+      "Q3b_6_PRE\n",
+      "Q3b_6_POST\n",
+      "Q3b_8_PRE\n",
+      "Q3b_8_POST\n",
+      "Q3b_9_PRE\n",
+      "Q3b_9_POST\n",
+      "Q3c_3_TEXT_PRE\n",
+      "Q3c_3_TEXT_POST\n",
+      "Q3c_PRE\n",
+      "Q3c_POST\n",
+      "Q3d_11_PRE\n",
+      "Q3d_11_POST\n",
+      "Q3d_1_PRE\n",
+      "Q3d_1_POST\n",
+      "Q3d_29_TEXT_PRE\n",
+      "Q3d_29_TEXT_POST\n",
+      "Q3d_29_PRE\n",
+      "Q3d_29_POST\n",
+      "Q3d_3_PRE\n",
+      "Q3d_3_POST\n",
+      "Q3d_4_PRE\n",
+      "Q3d_4_POST\n",
+      "Q3d_5_PRE\n",
+      "Q3d_5_POST\n",
+      "Q3d_6_PRE\n",
+      "Q3d_6_POST\n",
+      "Q3d_7_PRE\n",
+      "Q3d_7_POST\n",
+      "Q3d_8_PRE\n",
+      "Q3d_8_POST\n",
+      "Q3d_9_PRE\n",
+      "Q3d_9_POST\n",
+      "Q3e_11_TEXT_PRE\n",
+      "Q3e_11_TEXT_POST\n",
+      "Q3e_11_PRE\n",
+      "Q3e_11_POST\n",
+      "Q3e_12_PRE\n",
+      "Q3e_12_POST\n",
+      "Q3e_14_PRE\n",
+      "Q3e_14_POST\n",
+      "Q3e_15_PRE\n",
+      "Q3e_15_POST\n",
+      "Q3e_16_PRE\n",
+      "Q3e_16_POST\n",
+      "Q3e_17_PRE\n",
+      "Q3e_17_POST\n",
+      "Q3e_34_PRE\n",
+      "Q3e_34_POST\n",
+      "Q3e_4_PRE\n",
+      "Q3e_4_POST\n",
+      "Q3e_6_PRE\n",
+      "Q3e_6_POST\n",
+      "Q3f_PRE\n",
+      "Q3f_POST\n",
+      "Q4B_PRE\n",
+      "Q4B_POST\n",
+      "Q4a_PRE\n",
+      "Q4a_POST\n",
+      "Q4b.l_PRE\n",
+      "Q4b.l_POST\n",
+      "Q4b_11_TEXT_PRE\n",
+      "Q4b_11_TEXT_POST\n",
+      "Q4b_11_PRE\n",
+      "Q4b_11_POST\n",
+      "Q4b_21_PRE\n",
+      "Q4b_21_POST\n",
+      "Q4b_23_PRE\n",
+      "Q4b_23_POST\n",
+      "Q4b_25_PRE\n",
+      "Q4b_25_POST\n",
+      "Q4b_27_PRE\n",
+      "Q4b_27_POST\n",
+      "Q4b_29_PRE\n",
+      "Q4b_29_POST\n",
+      "Q4b_33_PRE\n",
+      "Q4b_33_POST\n",
+      "Q4b_35_PRE\n",
+      "Q4b_35_POST\n",
+      "Q4b_39_PRE\n",
+      "Q4b_39_POST\n",
+      "Q4b_3_PRE\n",
+      "Q4b_3_POST\n",
+      "Q4b_4_PRE\n",
+      "Q4b_4_POST\n",
+      "Q4b_8_PRE\n",
+      "Q4b_8_POST\n",
+      "Q4c_PRE\n",
+      "Q4c_POST\n",
+      "Q5a_PRE\n",
+      "Q5a_POST\n",
+      "Q5b_PRE\n",
+      "Q5b_POST\n",
+      "Q5c_PRE\n",
+      "Q5c_POST\n",
+      "Q6a_8_TEXT_PRE\n",
+      "Q6a_8_TEXT_POST\n",
+      "Q6a_PRE\n",
+      "Q6a_POST\n",
+      "Q6b.i_3_TEXT_PRE\n",
+      "Q6b.i_3_TEXT_POST\n",
+      "Q6b.i_4_TEXT_PRE\n",
+      "Q6b.i_4_TEXT_POST\n",
+      "Q6b.i_5_TEXT_PRE\n",
+      "Q6b.i_5_TEXT_POST\n",
+      "Q6b.i_8_TEXT_PRE\n",
+      "Q6b.i_8_TEXT_POST\n",
+      "Q6b.i_PRE\n",
+      "Q6b.i_POST\n",
+      "Q6b_PRE\n",
+      "Q6b_POST\n",
+      "Q6c_1_PRE\n",
+      "Q6c_1_POST\n",
+      "Q6c_2_PRE\n",
+      "Q6c_2_POST\n",
+      "Q6c_3_PRE\n",
+      "Q6c_3_POST\n",
+      "Q6c_4_PRE\n",
+      "Q6c_4_POST\n",
+      "Q6d_PRE\n",
+      "Q6d_POST\n",
+      "Q6e_1_PRE\n",
+      "Q6e_1_POST\n",
+      "Q6e_2_PRE\n",
+      "Q6e_2_POST\n",
+      "Q6e_3_TEXT_PRE\n",
+      "Q6e_3_TEXT_POST\n",
+      "Q6e_3_PRE\n",
+      "Q6e_3_POST\n",
+      "Q6e_4_PRE\n",
+      "Q6e_4_POST\n",
+      "Q6e_7_PRE\n",
+      "Q6e_7_POST\n",
+      "Q6f_1_PRE\n",
+      "Q6f_1_POST\n",
+      "Q6f_2_PRE\n",
+      "Q6f_2_POST\n",
+      "Q6f_3_PRE\n",
+      "Q6f_3_POST\n",
+      "Q6f_4_PRE\n",
+      "Q6f_4_POST\n",
+      "Q6f_5_PRE\n",
+      "Q6f_5_POST\n",
+      "Q6f_6_PRE\n",
+      "Q6f_6_POST\n",
+      "Q6f_7_TEXT_PRE\n",
+      "Q6f_7_TEXT_POST\n",
+      "Q6f_7_PRE\n",
+      "Q6f_7_POST\n",
+      "Q6f_8_PRE\n",
+      "Q6f_8_POST\n",
+      "Q6g_PRE\n",
+      "Q6g_POST\n",
+      "Q6h_PRE\n",
+      "Q6h_POST\n",
+      "Q6i_PRE\n",
+      "Q6i_POST\n",
+      "Q6j_1_PRE\n",
+      "Q6j_1_POST\n",
+      "Q6j_2_PRE\n",
+      "Q6j_2_POST\n",
+      "Q7a_10_PRE\n",
+      "Q7a_10_POST\n",
+      "Q7a_11_PRE\n",
+      "Q7a_11_POST\n",
+      "Q7a_12_PRE\n",
+      "Q7a_12_POST\n",
+      "Q7a_1_PRE\n",
+      "Q7a_1_POST\n",
+      "Q7a_2_PRE\n",
+      "Q7a_2_POST\n",
+      "Q7a_3_PRE\n",
+      "Q7a_3_POST\n",
+      "Q7a_4_PRE\n",
+      "Q7a_4_POST\n",
+      "Q7a_5_PRE\n",
+      "Q7a_5_POST\n",
+      "Q7a_6_PRE\n",
+      "Q7a_6_POST\n",
+      "Q7a_7_PRE\n",
+      "Q7a_7_POST\n",
+      "Q7a_8_PRE\n",
+      "Q7a_8_POST\n",
+      "Q7a_9_PRE\n",
+      "Q7a_9_POST\n",
+      "Q7b_1_PRE\n",
+      "Q7b_1_POST\n",
+      "Q7b_2_PRE\n",
+      "Q7b_2_POST\n",
+      "Q7b_3_PRE\n",
+      "Q7b_3_POST\n",
+      "Q7b_4_PRE\n",
+      "Q7b_4_POST\n",
+      "Q7c_1_PRE\n",
+      "Q7c_1_POST\n",
+      "Q7c_2_PRE\n",
+      "Q7c_2_POST\n",
+      "Q7c_3_PRE\n",
+      "Q7c_3_POST\n",
+      "Q7c_4_PRE\n",
+      "Q7c_4_POST\n",
+      "QNC1a_PRE\n",
+      "QNC1a_POST\n",
+      "QNC1b_PRE\n",
+      "QNC1b_POST\n",
+      "QNC1c_PRE\n",
+      "QNC1c_POST\n",
+      "Q_TotalDuration_PRE\n",
+      "Q_TotalDuration_POST\n",
+      "Qt1_Click Count_PRE\n",
+      "Qt1_Click Count_POST\n",
+      "Qt1_First Click_PRE\n",
+      "Qt1_First Click_POST\n",
+      "Qt1_Last Click_PRE\n",
+      "Qt1_Last Click_POST\n",
+      "Qt1_Page Submit_PRE\n",
+      "Qt1_Page Submit_POST\n",
+      "Qt2_Click Count_PRE\n",
+      "Qt2_Click Count_POST\n",
+      "Qt2_First Click_PRE\n",
+      "Qt2_First Click_POST\n",
+      "Qt2_Last Click_PRE\n",
+      "Qt2_Last Click_POST\n",
+      "Qt2_Page Submit_PRE\n",
+      "Qt2_Page Submit_POST\n",
+      "Qt3_Click Count_PRE\n",
+      "Qt3_Click Count_POST\n",
+      "Qt3_First Click_PRE\n",
+      "Qt3_First Click_POST\n",
+      "Qt3_Last Click_PRE\n",
+      "Qt3_Last Click_POST\n",
+      "Qt3_Page Submit_PRE\n",
+      "Qt3_Page Submit_POST\n",
+      "Qt4_Click Count_PRE\n",
+      "Qt4_Click Count_POST\n",
+      "Qt4_First Click_PRE\n",
+      "Qt4_First Click_POST\n",
+      "Qt4_Last Click_PRE\n",
+      "Qt4_Last Click_POST\n",
+      "Qt4_Page Submit_PRE\n",
+      "Qt4_Page Submit_POST\n",
+      "QtDem_Click Count_PRE\n",
+      "QtDem_Click Count_POST\n",
+      "QtDem_First Click_PRE\n",
+      "QtDem_First Click_POST\n",
+      "QtDem_Last Click_PRE\n",
+      "QtDem_Last Click_POST\n",
+      "QtDem_Page Submit_PRE\n",
+      "QtDem_Page Submit_POST\n",
+      "QtEthics_Click Count_PRE\n",
+      "QtEthics_Click Count_POST\n",
+      "QtEthics_First Click_PRE\n",
+      "QtEthics_First Click_POST\n",
+      "QtEthics_Last Click_PRE\n",
+      "QtEthics_Last Click_POST\n",
+      "QtEthics_Page Submit_PRE\n",
+      "QtEthics_Page Submit_POST\n",
+      "QtIntro_Click Count_PRE\n",
+      "QtIntro_Click Count_POST\n",
+      "QtIntro_First Click_PRE\n",
+      "QtIntro_First Click_POST\n",
+      "QtIntro_Last Click_PRE\n",
+      "QtIntro_Last Click_POST\n",
+      "QtIntro_Page Submit_PRE\n",
+      "QtIntro_Page Submit_POST\n",
+      "QtNC_Click Count_PRE\n",
+      "QtNC_Click Count_POST\n",
+      "QtNC_First Click_PRE\n",
+      "QtNC_First Click_POST\n",
+      "QtNC_Last Click_PRE\n",
+      "QtNC_Last Click_POST\n",
+      "QtNC_Page Submit_PRE\n",
+      "QtNC_Page Submit_POST\n",
+      "ResponseId_PRE\n",
+      "ResponseId_POST\n",
+      "StartDate_PRE\n",
+      "StartDate_POST\n",
+      "Statu_PRE\n",
+      "Statu_POST\n",
+      "Survey_PRE\n",
+      "Survey_POST\n",
+      "Unnamed: 7_PRE\n",
+      "Unnamed: 7_POST\n",
+      "V5_PRE\n",
+      "V5_POST\n",
+      "models_PRE\n",
+      "methods_PRE\n",
+      "actions_PRE\n",
+      "models_POST\n",
+      "methods_POST\n",
+      "actions_POST\n",
+      "ID\n",
+      "LastName\n",
+      "FirstName\n",
+      "Gender\n",
+      "URM_Status\n",
+      "Q6b\n",
+      "Q6b.i\n",
+      "Major\n",
+      "Class_Standing\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/nv/r08brpxx1v1_3vg_n58lcvxm0000gn/T/ipykernel_91806/2314389241.py:5: DtypeWarning: Columns (10,11,15,16,17,34,35,48,49,50,60,61,116,149,151,158,160,192,245,246,274,309,310) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  masterdf = pd.read_csv(\"/Users/izzywells/Desktop/Complete_Concat_Identified.csv\")\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import pandas as pd\n",
+    "\n",
+    "#import Complete_Concat_Identified.csv \n",
+    "masterdf = pd.read_csv(\"/Users/izzywells/Desktop/Complete_Concat_Identified.csv\")\n",
+    "acc= 0\n",
+    "for row in masterdf: \n",
+    "    if acc == 1: \n",
+    "        break\n",
+    "    print(row)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "490b882a",
    "metadata": {},
    "outputs": [],
    "source": []
